--- a/src/app/features/layouts/users-layout/users-layout.component.html
+++ b/src/app/features/layouts/users-layout/users-layout.component.html
@@ -1,7 +1,11 @@
-<header></header>
+<header>
+  <h1>header layout</h1>
+</header>
 
 <main>
-  <router-outlet />
+  <router-outlet/>
 </main>
 
-<footer></footer>
+<footer>
+  <h1>Footer layout</h1>
+</footer>
