feat: new components, navbar, ...

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: Poppins, sans-serif;
+}
+
+p, span, a, li, button {
+    font-family: Rpboto, sans-serif;
+}
