--- a/src/app/features/layouts/public-layout/public-layout.component.html
+++ b/src/app/features/layouts/public-layout/public-layout.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Haader layout</h1>
+  <navbar />
 </header>
 
 <main>
@@ -7,5 +7,5 @@
 </main>
 
 <footer>
-  <h1>Footer layout</h1>
+  <footer-component/>
 </footer>
