--- a/src/app/shared/components/user-app/sidebar/sidebar.component.html
+++ b/src/app/shared/components/user-app/sidebar/sidebar.component.html
@@ -1,1 +1,25 @@
-<p>sidebar works!</p>,
+<div class="flex flex-col justify-between w-full bg-[#D1D0D0] h-screen">
+  <!-- Pimer div -->
+  <div class="">
+    <div class="p-4">
+      <img src="img/logo.png" class="" />
+    </div>
+
+    <!-- Paginas -->
+    <div>
+     
+    </div>
+  </div>
+
+  <!-- Segundo div -->
+  <div class="">
+    <div class="flex flex-row items-center p-4 gap-3">
+      <img src="icons/configuracion.png" alt="" class="w-[14%]" />
+      <p>Ajustes</p>
+    </div>
+    <div class="flex flex-row items-center p-4 gap-3">
+      <img src="icons/logout.png" class="w-[14%]" />
+      <p>Cerrar Sesión</p>
+    </div>
+  </div>
+</div>
