feat: enrutamiento general finalizado v1

--- a/src/app/shared/components/button-links/secondary-link/secondary-link.component.html
+++ b/src/app/shared/components/button-links/secondary-link/secondary-link.component.html
@@ -1,3 +1,7 @@
-<a [routerLink]="routerLink" class="font-semibold">
+<a
+  [routerLink]="routerLink"
+  class="font-medium text-inherit transition-all duration-200 hover:underline hover:decoration-muted"
+  routerLinkActive="text-[#4294FF] font-semibold underline decoration-2 decoration-[#4294FF]"
+>
   {{ label }}
 </a>
