--- a/src/app/features/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/features/layouts/auth-layout/auth-layout.component.html
@@ -1,5 +1,20 @@
-<main>
-  <div>
-    <router-outlet />
+<main class="flex items-center justify-center min-h-screen bg-gray-100 px-4">
+  <div class="w-full max-w-md space-y-6">
+    
+    <!-- Botón de volver -->
+    <div>
+      <img
+        src="icons/atras.png"
+        alt="Volver"
+        routerLink="/inicio"
+        class="w-6 h-6 cursor-pointer transition-transform duration-200 hover:scale-110"
+      />
+    </div>
+
+    <!-- Contenedor del contenido dinámico -->
+    <div class="bg-white rounded-lg shadow-md p-6">
+      <router-outlet></router-outlet>
+    </div>
+
   </div>
 </main>
