--- a/src/app/shared/components/user-app/header/header.component.html
+++ b/src/app/shared/components/user-app/header/header.component.html
@@ -2,8 +2,7 @@
   class="flex justify-between items-center bg-white px-8 py-4 shadow-md h-[64px]"
 >
   <div class="text-xl font-semibold truncate max-w-[60%]">
-    <h2>Pagina</h2>
-    <!-- Cambiar por el nombre de la pagina actual -->
+    <h2>{{ currentPath }}</h2>
   </div>
 
   <div class="flex items-center gap-3">
@@ -11,8 +10,9 @@
       src="icons/usuario.png"
       alt="icono usuario"
       class="w-9 h-9 rounded-full object-cover"
+      [routerLink]="'/' + basePath + '/perfil'"
     />
-    <secondary-link label="name" routerLink="" />
+    <secondary-link label="name" [routerLink]="'/' + basePath + '/perfil'" />
     <!-- Cambiar por el nombre del usuario y la ruta de perfil, dependiendo de si estamos admin o usuarios -->
   </div>
 </div>
