--- a/src/app/shared/components/user-app/sidebar/sidebar.component.html
+++ b/src/app/shared/components/user-app/sidebar/sidebar.component.html
@@ -1,23 +1,57 @@
-<div class="flex flex-col justify-between w-full bg-[#D1D0D0] h-screen">
+<div class="flex flex-col justify-between w-full p-2 bg-[#D1D0D0] h-screen">
   <!-- Pimer div -->
   <div class="">
     <div class="p-4">
-      <img src="img/logo.png" class="" />
+      <img src="img/logo.png" [routerLink]="['/' + basePath + '/inicio']" class="w-[90%]" />
     </div>
-
-    <div>
+    <div class="flex flex-col gap-2">
+      @for (route of routes; track route.path) {
+      <div
+        class="flex flex-row items-center p-4 gap-4 hover:bg-[#f5f5f5] rounded-lg transition-colors duration-200"
+        routerLinkActive="bg-[#ebebeb]"
+      >
+        <img
+          src="icons/{{ route.data?.['icon'] }}.png"
+          alt=""
+          class="w-[14%]"
+        />
+        <a
+          routerLink="{{ route.path }}"
+          class="text-[16px] font-semibold text-[#333] hover:text-[#000] transition-colors duration-200"
+        >
+          {{ route.title }}
+        </a>
+      </div>
+      }
     </div>
   </div>
 
   <!-- Segundo div -->
-  <div class="">
-    <div class="flex flex-row items-center p-4 gap-3">
+  <div class="flex flex-col gap-2 border-t border-[#bbb] pt-4 mt-4">
+    <div
+      class="flex flex-row items-center p-4 gap-4 hover:bg-[#f5f5f5] rounded-lg transition-colors duration-200"
+      routerLinkActive="bg-[#ebebeb]"
+    >
       <img src="icons/configuracion.png" alt="" class="w-[14%]" />
-      <p>Ajustes</p>
+
+      <a
+        [routerLink]="['/' + basePath + '/configuracion']"
+        class="text-[16px] font-semibold text-[#333] hover:text-[#000] transition-colors duration-200"
+      >
+        configuracion
+      </a>
     </div>
-    <div class="flex flex-row items-center p-4 gap-3">
+
+    <div
+      class="flex flex-row items-center p-4 gap-4 hover:bg-[#f5f5f5] rounded-lg transition-colors duration-200"
+    >
       <img src="icons/logout.png" class="w-[14%]" />
-      <p>Cerrar Sesión</p>
+      <button
+        (click)="logout()"
+        class="text-[16px] font-semibold text-[#333] hover:text-[#000] transition-colors duration-200"
+      >
+        Cerrar sesión
+      </button>
     </div>
   </div>
 </div>
