feat: actualizamos estilos de componenees de navegacion

--- a/src/app/shared/components/user-app/header/header.component.html
+++ b/src/app/shared/components/user-app/header/header.component.html
@@ -1,18 +1,23 @@
 <div
-  class="flex justify-between items-center bg-white px-8 py-4 shadow-md h-[64px]"
+  class="flex justify-between items-center bg-white px-6 py-3 rounded-md shadow-lg h-[64px]"
 >
-  <div class="text-xl font-semibold truncate max-w-[60%]">
+  <!-- Título actual -->
+  <div class="text-lg font-medium truncate max-w-[60%] text-[#333]">
     <h2>{{ currentPath }}</h2>
   </div>
 
+  <!-- Perfil de usuario -->
   <div class="flex items-center gap-3">
     <img
       src="icons/usuario.png"
       alt="icono usuario"
-      class="w-9 h-9 rounded-full object-cover"
+      class="w-9 h-9 rounded-full object-cover cursor-pointer transition-transform duration-200 hover:scale-105"
       [routerLink]="'/' + basePath + '/perfil'"
     />
-    <secondary-link label="name" [routerLink]="'/' + basePath + '/perfil'" />
-    <!-- Cambiar por el nombre del usuario y la ruta de perfil, dependiendo de si estamos admin o usuarios -->
+    <secondary-link
+      label="name"
+      [routerLink]="'/' + basePath + '/perfil'"
+      class="text-sm font-medium text-[#4294FF] hover:text-[#2f79d1] transition-colors duration-200"
+    />
   </div>
 </div>
