--- a/src/app/features/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/features/layouts/auth-layout/auth-layout.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Contenedor del contenido dinámico -->
-    <div class="bg-white rounded-lg shadow-md p-6">
+    <div class="">
       <router-outlet></router-outlet>
     </div>
 
