--- a/src/app/shared/components/button-links/primary-button/primary-button.component.html
+++ b/src/app/shared/components/button-links/primary-button/primary-button.component.html
@@ -1,3 +1,3 @@
-<button>
+<button class="bg-[#2C3E50] text-white font-bold py-2 px-4 rounded hover:bg-[#405a74] focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
     {{label}}
 </button>
