feat: nuevos guards y mejoras en rutas y servicios

--- a/src/app/shared/components/user-app/header/header.component.html
+++ b/src/app/shared/components/user-app/header/header.component.html
@@ -15,7 +15,7 @@
       [routerLink]="'/' + basePath + '/perfil'"
     />
     <secondary-link
-      label="{{this.user?.nombre}}"
+      label="{{user()?.nombre}}"
       [routerLink]="'/' + basePath + '/perfil'"
       class="text-sm font-medium text-[#4294FF] hover:text-[#2f79d1] transition-colors duration-200"
     />
