--- a/src/app/features/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/features/layouts/auth-layout/auth-layout.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- Contenedor del contenido dinámico -->
-    <div class="">
+    <div>
       <router-outlet></router-outlet>
     </div>
 
