--- a/src/app/features/admin/pages/users/users.component.html
+++ b/src/app/features/admin/pages/users/users.component.html
@@ -1,1 +1,86 @@
-<p>users works!</p>,
+<div class="overflow-x-auto rounded-lg mt-6 p-4 shadow-xl bg-white">
+  <!-- Encabezado -->
+  <div class="mb-4">
+    <h1 class="text-2xl font-semibold text-gray-800">Listado de usuarios</h1>
+    <p class="text-sm text-gray-500">Usuarios registrados en la plataforma</p>
+  </div>
+
+  <!-- Barra de búsqueda -->
+  <div class="mb-4">
+    <form
+      class="flex items-center gap-2"
+      role="search"
+      aria-label="Buscar usuario"
+    >
+      <input
+        type="text"
+        placeholder="Buscar por nombre"
+        class="border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 w-1/6 max-w-sm"
+        [value]="name()"
+        (input)="name.set($any($event.target).value)"
+      />
+      <button
+        type="submit"
+        class="bg-[#4294FF] text-white px-4 py-2 rounded-lg hover:bg-[#2f79d1] transition"
+      >
+        Buscar
+      </button>
+    </form>
+  </div>
+
+  <table
+    class="min-w-full divide-y divide-gray-200 bg-white rounded-lg shadow-md"
+  >
+    <thead class="bg-gray-100">
+      <tr>
+        <th
+          class="px-6 py-3 text-left text-xs font-medium text-gray-700 uppercase tracking-wider"
+        >
+          Nombre
+        </th>
+        <th
+          class="px-6 py-3 text-left text-xs font-medium text-gray-700 uppercase tracking-wider"
+        >
+          Email
+        </th>
+        <th
+          class="px-6 py-3 text-left text-xs font-medium text-gray-700 uppercase tracking-wider"
+        >
+          Rol
+        </th>
+        <th
+          class="px-6 py-3 text-left text-xs font-medium text-gray-700 uppercase tracking-wider"
+        >
+          Fecha de registro
+        </th>
+        <th
+          class="px-6 py-3 text-left text-xs font-medium text-gray-700 uppercase tracking-wider"
+        >
+          actualización
+        </th>
+      </tr>
+    </thead>
+    <tbody class="divide-y divide-gray-200 text-sm text-gray-800">
+      @if ((usersResource.value()?.users ?? []).length > 0) { @for (user of
+      usersResource.value()?.users; track $index) {
+      <tr class="hover:bg-gray-50 transition duration-200">
+        <td class="px-6 py-4 whitespace-nowrap">{{ user.nombre }}</td>
+        <td class="px-6 py-4 whitespace-nowrap">{{ user.email }}</td>
+        <td class="px-6 py-4 whitespace-nowrap capitalize">{{ user.rol }}</td>
+        <td class="px-6 py-4 whitespace-nowrap text-gray-600">
+          {{ user.created_at | date : "dd/MM/yyyy - HH:mm" }}
+        </td>
+        <td class="px-6 py-4 whitespace-nowrap text-gray-600">
+          {{ user.updated_at | date : "dd/MM/yyyy - HH:mm" }}
+        </td>
+      </tr>
+      } } @else {
+      <tr>
+        <td colspan="3" class="text-center px-6 py-4 text-gray-500 italic">
+          No hay usuarios disponibles.
+        </td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
