--- a/src/app/shared/pages/settings/settings.component.html
+++ b/src/app/shared/pages/settings/settings.component.html
@@ -84,7 +84,7 @@
     class="space-y-4 bg-gray-50 p-6 rounded-md border border-gray-200 shadow-sm"
   >
     <h3 class="text-lg font-semibold text-gray-700">Actualizar nombre</h3>
-    <div class="flex flex-col gap-4 items-center">
+    <div class="flex flex-col gap-4 items-end">
       <input
         id="nombre"
         formControlName="nombre"
@@ -107,7 +107,7 @@
     class="space-y-4 bg-gray-50 p-6 rounded-md border border-gray-200 shadow-sm"
   >
     <h3 class="text-lg font-semibold text-gray-700">Actualizar contraseña</h3>
-    <div class="flex flex-col gap-4 items-center">
+    <div class="flex flex-col gap-4 items-end">
       <input
         id="contraseña_actual"
         formControlName="contraseña_actual"
